--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.29.0",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "mammoth": "^1.11.0",
     "pdfjs-dist": "^5.4.394",
     "react": "^19.2.0",
