--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,11 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "mammoth": "^1.11.0",
-    "pdfjs-dist": "^5.4.394",
+    "pdfjs": "^2.5.4",
+    "pdfjs-dist": "^4.4.175",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.9.5",
+    "react-router": "^7.9.6",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
